fixed bug on preemption and allocation